--- a/popup.html
+++ b/popup.html
@@ -5,13 +5,23 @@
     <style>
         body {
             width: 300px;
-            font-family: Arial, sans-serif;
+            font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
         }
         #keywordInput {
             width: 100%;
             margin-bottom: 10px;
         }
         #keywordList {
+            max-height: 150px; /* Set a max height for scrolling */
+            overflow-y: auto; /* Enable vertical scrolling */
+            border: 1px solid #ccc; /* Optional: Add a border */
+            padding: 5px; /* Optional: Add some padding */
+        }
+        #keywordInput2 {
+            width: 100%;
+            margin-bottom: 10px;
+        }
+        #keywordList2 {
             max-height: 150px; /* Set a max height for scrolling */
             overflow-y: auto; /* Enable vertical scrolling */
             border: 1px solid #ccc; /* Optional: Add a border */
@@ -34,10 +44,18 @@
 </head>
 <body>
     <h1>__MSG_popup_titles__</h1>
+    <h2>__MSG_title_keywords__:</h2>
     <input type="text" id="keywordInput" placeholder="__MSG_enter_keywords__">
     <button id="saveKeywords">__MSG_save_keywords__</button>
-    <h2>__MSG_keywords__:</h2>
+    <button id="deleteAll">__MSG_delete_all__</button>
     <div id="keywordList"></div>
+
+    <h3>__MSG_uploader_keywords__:</h3>
+    <input type="text" id="keywordInput2" placeholder="__MSG_enter_keywords__">
+    <button id="saveKeywords2">__MSG_save_keywords__</button>
+    <button id="deleteAll2">__MSG_delete_all__</button>
+    <div id="keywordList2"></div>
+
     <script src="popup.js"></script>
 </body>
 </html>
